# Smart-Task-Manager

./: .env  README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py  security.py
app/crud/: project.py  todo.py  user.py
app/dependencies/: Enums.py  depends.py
app/models/: projects.py  todos.py  users.py
app/routers/: auth.py  project.py  todo.py  user.py
app/schemas/: Token.py  projectSchemas.py  todoSchemas.py  userSchemas.py
migration/: env.py
migration/versions/: dd9a2c776195_init_table.py
