[project]
name = "my-fist-real-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "jose>=1.0.0",
    "mypy>=2.0.0",
    "passlib>=1.7.4",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "python-multipart>=0.0.27",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.5.0",
]
